# hh_project

./: README.md  main.py  pyproject.toml  vacancies.json
src/: abstracted.py  hh_api.py  jsn.py  json_saver.py  utils.py  vacancy.py
tests/: test_hh_api.py  test_jsn.py  test_vacancy.py
