[tool.poetry]
name = "pyproject-toml"
version = "0.1.0"
description = ""
authors = ["Ilnara <nara051199@gmail.com>"]
license = ""
readme = "README.md"
packages = [{include = "pyproject"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
